--- a/src/window/window.html
+++ b/src/window/window.html
@@ -47,7 +47,7 @@
                 <!-- TODO: menu-info-card is a bad name -->
                 <div class="menu-info-card">
                     <span class="language-depend" translation="menu-players"></span>
-                    :&ensp;
+                    :&nbsp;
                     <span id="menu-info-players-value">0</span>
                 </div>
                 <div class="menu-info-card">
