--- a/src/window/window.html
+++ b/src/window/window.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Mindustry server control panel.">
     <meta name="author" content="Andrew &quot;Summet&quot; Antsiferov">
     <link href="styles/window.css" rel="stylesheet">
+    <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Main script. -->
     <script src="window.js"></script>
     <title>Server Console</title>
 </head>
