--- a/src/window/window.html
+++ b/src/window/window.html
@@ -1,92 +1,90 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="description" content="Mindustry server control panel.">
-    <meta name="author" content="Andrew &quot;Summet&quot; Antsiferov">
-    <link href="styles/window.css" rel="stylesheet">
-    <!-- Font Awesome icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Main script. -->
-    <script src="window.js"></script>
-    <title>Server Console</title>
-</head>
-<body>
-<div class="container">
-    <div class="titlebar">
-        <div class="titlebar-buttons">
-            <span class="titlebar-button" id="minimize"></span>
-            <span class="titlebar-button" id="maximize"></span>
-            <span class="titlebar-button" id="close"></span>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
+        <meta name="description" content="Mindustry server control panel.">
+        <meta name="author" content="Andrew &quot;Summet&quot; Antsiferov">
+        <link href="window.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="window.js"></script>
+        <title>Server Console</title>
+    </head>
+    <body>
+    <div class="container">
+        <div class="titlebar">
+            <div class="titlebar-buttons">
+                <span class="titlebar-button" id="minimize"></span>
+                <span class="titlebar-button" id="maximize"></span>
+                <span class="titlebar-button" id="close"></span>
+            </div>
         </div>
-    </div>
 
-    <div class="log" id="console-log"></div>
+        <div class="log" id="console-log"></div>
 
-    <div class="menu">
-        <span class="menu-title language-depend" translation="menu-players"></span>
-        <div class="menu-players menu-layout" id="console-players"></div>
+        <div class="menu">
+            <span class="menu-title language-depend" translation="menu-players"></span>
+            <div class="menu-players menu-layout" id="console-players"></div>
 
-        <span class="menu-title language-depend" translation="menu-statistics"></span>
-        <div class="menu-statistics menu-layout">
-            <div class="menu-meters">
-                <div class="menu-cpu menu-half-circle">
-                    <div class="menu-cpu-overlay menu-half-circle-overlay">
-                        <div class="menu-cpu-rotate menu-half-circle-rotate" id="cpu-rotate"></div>
+            <span class="menu-title language-depend" translation="menu-statistics"></span>
+            <div class="menu-statistics menu-layout">
+                <div class="menu-meters">
+                    <div class="menu-cpu menu-half-circle">
+                        <div class="menu-cpu-overlay menu-half-circle-overlay">
+                            <div class="menu-cpu-rotate menu-half-circle-rotate" id="cpu-rotate"></div>
+                        </div>
+                        <span id="cpu-value">0%<br>CPU</span>
                     </div>
-                    <span id="cpu-value">0%<br>CPU</span>
-                </div>
-                <br>
-                <div class="menu-ram menu-half-circle">
-                    <div class="menu-ram-overlay menu-half-circle-overlay">
-                        <div class="menu-ram-rotate menu-half-circle-rotate" id="ram-rotate"></div>
+                    <br>
+                    <div class="menu-ram menu-half-circle">
+                        <div class="menu-ram-overlay menu-half-circle-overlay">
+                            <div class="menu-ram-rotate menu-half-circle-rotate" id="ram-rotate"></div>
+                        </div>
+                        <span id="ram-value">0%<br>RAM</span>
                     </div>
-                    <span id="ram-value">0%<br>RAM</span>
+                </div>
+
+                <div class="menu-info">
+                    <div class="menu-info-card">
+                        <span class="language-depend" translation="menu-players"></span>
+                        :&nbsp;
+                        <span id="menu-info-players-value">0</span>
+                    </div>
+                    <div class="menu-info-card">
+                        <span class="language-depend" translation="menu-maps"></span>
+                        :&nbsp;
+                        <span id="menu-info-maps-value">0</span>
+                    </div>
+                    <div class="menu-info-card">
+                        <span class="language-depend" translation="menu-mods"></span>
+                        :&nbsp;
+                        <span id="menu-info-mods-value">0</span>
+                    </div>
+                    <div class="menu-info-card">
+                        <span class="language-depend" translation="menu-plugins"></span>
+                        :&nbsp;
+                        <span id="menu-info-plugins-value">0</span>
+                    </div>
                 </div>
             </div>
 
-            <div class="menu-info">
-                <div class="menu-info-card">
-                    <span class="language-depend" translation="menu-players"></span>
-                    :&nbsp;
-                    <span id="menu-info-players-value">0</span>
+            <div class="menu-buttons">
+                <div class="menu-buttons-up">
+                    <button class="menu-button language-depend" id="menu-host" translation="menu-host"></button>
+                    <button class="menu-button language-depend" id="menu-stop" translation="menu-stop"></button>
+                    <button class="menu-button language-depend" id="menu-break" translation="menu-break"></button>
                 </div>
-                <div class="menu-info-card">
-                    <span class="language-depend" translation="menu-maps"></span>
-                    :&nbsp;
-                    <span id="menu-info-maps-value">0</span>
-                </div>
-                <div class="menu-info-card">
-                    <span class="language-depend" translation="menu-mods"></span>
-                    :&nbsp;
-                    <span id="menu-info-mods-value">0</span>
-                </div>
-                <div class="menu-info-card">
-                    <span class="language-depend" translation="menu-plugins"></span>
-                    :&nbsp;
-                    <span id="menu-info-plugins-value">0</span>
+                <div class="menu-buttons-down">
+                    <button class="menu-button language-depend" id="menu-server-folder" translation="menu-server-folder"></button>
                 </div>
             </div>
         </div>
 
-        <div class="menu-buttons">
-            <div class="menu-buttons-up">
-                <button class="menu-button language-depend" id="menu-host" translation="menu-host"></button>
-                <button class="menu-button language-depend" id="menu-stop" translation="menu-stop"></button>
-                <button class="menu-button language-depend" id="menu-break" translation="menu-break"></button>
-            </div>
-            <div class="menu-buttons-down">
-                <button class="menu-button language-depend" id="menu-server-folder" translation="menu-server-folder"></button>
-            </div>
+        <div class="command-line">
+            <label for="console-input">></label>
+            <input autofocus class="command-line-input" id="console-input" type="text">
+            <span class="fa fa-gear console-settings"></span>
         </div>
     </div>
-
-    <div class="command-line">
-        <label for="console-input">></label>
-        <input autofocus class="command-line-input" id="console-input" type="text">
-        <!-- TODO: Pure CSS -->
-        <span class="fa fa-gear console-settings"></span>
-    </div>
-</div>
-</body>
+    </body>
 </html>
