Color parser fixes

--- a/src/window/window.html
+++ b/src/window/window.html
@@ -85,8 +85,15 @@
 
             <div class="command-line">
                 <label for="console-input">></label>
-                <input autofocus class="command-line-input" id="console-input" type="text">
-                <gear-icon size="20px" class="console-settings"></gear-icon>
+                <input
+                        autofocus
+                        class="command-line-input"
+                        id="console-input"
+                        type="text"
+                        placeholder="..."
+                >
+                <!-- TODO: Settings page
+                <gear-icon size="20px" class="console-settings-button" id="console-settings-button"></gear-icon> -->
             </div>
         </div>
     </body>
